--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -11,7 +11,7 @@ nav {
 }
 
 .nav-list li a.active {
-    background-color: #f00;
+    background-color:#999;
     padding: 5px;
     color: white;
     border-radius: 5px;
